--- a/AutoClick/Pages/AnunciarMiAuto.cshtml
+++ b/AutoClick/Pages/AnunciarMiAuto.cshtml
@@ -306,11 +306,11 @@
                         </div>
                         
                         <!-- Placa -->
-                        <div data-estado="Default" data-label2="true" style="width: 260px; height: 60px; left: 910px; top: 60px; position: absolute">
-                            <input asp-for="Formulario.PlacaVehiculo" type="text" id="placa" placeholder="Introducir placa (opcional para autos nuevos)" style="width: 260px; height: 42px; padding-top: 8px; padding-bottom: 8px; padding-left: 16px; padding-right: 16px; left: 0px; top: 18px; position: absolute; background: #02081C; border-radius: 4px; outline: 0.50px rgba(255, 255, 255, 0.50) solid; outline-offset: -0.50px; justify-content: flex-start; align-items: center; gap: 8px; display: inline-flex; color: rgba(255, 255, 255, 0.50); font-size: 14px; font-family: Montserrat; font-weight: 500; border: none;" />
+                        <div data-asterizco="true" data-property-1="Default" style="width: 260px; height: 60px; left: 910px; top: 60px; position: absolute">
+                            <input asp-for="Formulario.PlacaVehiculo" type="text" id="placa" placeholder="Introducir placa" required style="width: 260px; height: 42px; padding-top: 8px; padding-bottom: 8px; padding-left: 16px; padding-right: 16px; left: 0px; top: 18px; position: absolute; background: #02081C; border-radius: 4px; outline: 0.50px rgba(255, 255, 255, 0.50) solid; outline-offset: -0.50px; justify-content: flex-start; align-items: center; gap: 8px; display: inline-flex; color: rgba(255, 255, 255, 0.50); font-size: 14px; font-family: Montserrat; font-weight: 500; border: none;" />
                             <div style="left: 0px; top: 0px; position: absolute; justify-content: flex-start; align-items: center; gap: 4px; display: inline-flex">
                                 <div style="text-box-trim: trim-both; text-box-edge: cap alphabetic; color: white; font-size: 14px; font-family: Montserrat; font-weight: 500; word-wrap: break-word">Placa del vehículo</div>
-                                <div style="text-box-trim: trim-both; text-box-edge: cap alphabetic; color: rgba(255, 255, 255, 0.6); font-size: 14px; font-family: Montserrat; font-weight: 400; word-wrap: break-word">(opcional)</div>
+                                <div style="width: 4px; height: 4px; background: #F92B2B; border-radius: 9999px"></div>
                             </div>
                         </div>
                         
